--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ gunicorn==23.0.0
 idna==3.11
 pillow==12.0.0
 pipreqs==0.4.13
+psycopg==3.3.2
 python-dotenv==1.2.1
 requests==2.32.5
 six==1.17.0
@@ -22,4 +23,5 @@ sqlparse==0.5.4
 tzdata==2025.2
 urllib3==2.6.1
 yarg==0.1.10
+
 
